# machine

./: .gitignore  AGENTS.md  Makefile  README.md  env.sh  environment.conf  environment.d.sh  profile
.antigravitycli/: 12387325-5645-4495-824d-757fbd09e9e1.json
1password/: Makefile
agent-browser/: Makefile  agent-browser
agents/: AGENTS.md  Makefile
antigravity/: Makefile  policies.toml  settings.json
aws/: Makefile  aws.fish
bash/: Makefile
btop/: Makefile  btop.conf
buf/: Makefile
claude/: Makefile  settings.json
claude-code/: Makefile  settings.json
codex/: AGENTS.md  Makefile  config.toml  sync-config.py
cursor/: AGENTS.md  Makefile  cli-config.json  hooks.json  keybindings.json  settings.json
dbus/: Makefile  io.github.odsod.desktop.service  service.py
defuddle/: Makefile
delta/: Makefile
docker/: Makefile
dropbox/: Makefile
eza/: Makefile
recorder/: AGENTS.md  Makefile  config.json  config.toml  pyproject.toml  recorder-note  recorder-toggle
recorder/hosts/: odsod-desktop.json  odsod-desktop.toml  odsod-x1-carbon.json  odsod-x1-carbon.toml
recorder/src/recorder/: __main__.py  app.py  config.py  debug_dom.py  lock.py  meet.py  meet_cdp.py  meet_dom.py  note.py  segment.py  segment_cli.py  segment_run.py  segmenter.py  signals.py  speaker_cdp.py  summarize.py  timeline.py  transcribe.py  transcript.py
recorder/src/recorder/prompts/: combine.md  summarize.md
recorder/tests/: test_meet_cdp.py  test_segmenter.py  test_speaker_cdp.py  test_timeline.py
recorder/tests/testdata/: meet-tiles-silent.html  meet-tiles-speaking.html
(+229 files in other folders)
