[project]
name = "recorder"
version = "0.1.0"
description = "Ambient meeting recorder with Textual TUI"
requires-python = ">=3.12"
dependencies = ["numpy>=2.0"]

[project.scripts]
recorder = "recorder.app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/recorder"]
