[project]
name = "recorder"
version = "0.1.0"
description = "Ambient meeting recorder daemon"
requires-python = ">=3.12"
dependencies = []

[project.scripts]
recorder = "recorder.app:main"
recorder-note = "recorder.note:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/recorder"]
