[project]
name = "recorder"
version = "0.1.0"
description = "Ambient meeting recorder daemon"
requires-python = ">=3.12"
dependencies = ["httpx", "websockets"]

[project.scripts]
recorder = "recorder.__main__:main"

[dependency-groups]
dev = ["pytest"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/recorder"]
